--- a/templates/pipeline/view.html
+++ b/templates/pipeline/view.html
@@ -9,6 +9,14 @@
 {% block content %}
 <div class="row">
     <div class="col col-md-6">
+        <h3>Pipeline</h3>
+        <ul class="list-unstyled">
+            <li>Repo: <a href="{{ metadata.repo_link }}" rel="noopener noreferrer" target="_blank">{{ metadata.repo_name }}</a></li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-md-6">
         <h3>Builds</h3>
         <div class="list-group">
             {% for build_id in build_ids %}
