--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock %} - Cartifacts</title>
 
-    <link href="{{ url_for('static', filename='bootstrap-v5.1.3.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='bootstrap-v5.1.3.min.css') }}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
